Additional zgc options.